--- a/index.html
+++ b/index.html
@@ -8,128 +8,38 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Roboto+Mono:wght@300;400;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      :root {
-        --stark-cyan: #00f2ff;
-        --stark-red: #ff3e3e;
-      }
-      body {
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        background-color: #000;
-        font-family: 'Roboto Mono', monospace;
-        position: fixed;
-        width: 100%;
-        height: 100%;
-      }
-      .font-orbitron { font-family: 'Orbitron', sans-serif; }
-      canvas {
-        touch-action: none;
-        z-index: 5;
-      }
-      /* Visor Background Effect */
-      #camera-visor {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        opacity: 0.25;
-        filter: brightness(1.2) contrast(1.5) sepia(100%) hue-rotate(140deg) saturate(3);
-        transform: scaleX(-1); /* Mirror camera */
-        z-index: 0;
-      }
-      .visor-overlay {
-        position: absolute;
-        inset: 0;
-        background: radial-gradient(circle at center, transparent 30%, rgba(0, 242, 255, 0.05) 100%);
-        pointer-events: none;
-        z-index: 1;
-      }
-      /* Scanning line effect */
-      .scan-line {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 4px;
-        background: linear-gradient(to bottom, transparent, var(--stark-cyan), transparent);
-        opacity: 0.15;
-        pointer-events: none;
-        animation: scan 10s linear infinite;
-        z-index: 10;
-      }
-      @keyframes scan {
-        0% { transform: translateY(-100%); }
-        100% { transform: translateY(100vh); }
-      }
-      .hud-border {
-        border: 1px solid rgba(0, 242, 255, 0.3);
-        background: rgba(0, 20, 40, 0.6);
-        backdrop-filter: blur(12px);
-      }
-      .hud-bracket-tl { border-top: 3px solid var(--stark-cyan); border-left: 3px solid var(--stark-cyan); }
-      .hud-bracket-tr { border-top: 3px solid var(--stark-cyan); border-right: 3px solid var(--stark-cyan); }
-      .hud-bracket-bl { border-bottom: 3px solid var(--stark-cyan); border-left: 3px solid var(--stark-cyan); }
-      .hud-bracket-br { border-bottom: 3px solid var(--stark-cyan); border-right: 3px solid var(--stark-cyan); }
-      
-      .reticle-spin {
-        animation: spin-slow 4s linear infinite;
-      }
-      @keyframes spin-slow {
-        from { transform: rotate(0deg); }
-        to { transform: rotate(360deg); }
-      }
-
-      /* Hide UI on very small portrait screens or provide warning */
-      @media (orientation: portrait) and (max-width: 600px) {
-        .portrait-warning {
-          display: flex;
-        }
-      }
-      .portrait-warning {
-        display: none;
-        position: fixed;
-        inset: 0;
-        background: #000;
-        z-index: 9999;
-        color: var(--stark-cyan);
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        padding: 2rem;
-        font-family: 'Orbitron', sans-serif;
-      }
+      :root { --stark-cyan: #00f2ff; }
+      body { margin: 0; background: #000; overflow: hidden; position: fixed; width: 100%; height: 100%; }
+      canvas { touch-action: none; z-index: 5; }
+      #camera-visor { position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; opacity: 0.2; filter: sepia(100%) hue-rotate(140deg); transform: scaleX(-1); z-index: 0; }
+      .scan-line { position: absolute; top: 0; left: 0; width: 100%; height: 2px; background: var(--stark-cyan); opacity: 0.1; animation: scan 8s linear infinite; pointer-events: none; z-index: 10; }
+      @keyframes scan { 0% { transform: translateY(-100%); } 100% { transform: translateY(100vh); } }
+      .hud-border { border: 1px solid rgba(0, 242, 255, 0.2); background: rgba(0, 10, 20, 0.7); backdrop-filter: blur(10px); }
+      @media (orientation: portrait) and (max-width: 600px) { .portrait-warning { display: flex; } }
+      .portrait-warning { display: none; position: fixed; inset: 0; background: #000; z-index: 9999; color: var(--stark-cyan); flex-direction: column; align-items: center; justify-content: center; font-family: 'Orbitron', sans-serif; }
     </style>
-    <!-- MediaPipe Tasks Vision -->
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision/vision_bundle.js" crossorigin="anonymous"></script>
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react-dom": "https://esm.sh/react-dom@^19.2.3",
     "@react-three/drei": "https://esm.sh/@react-three/drei@^10.7.7",
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "@react-three/fiber": "https://esm.sh/@react-three/fiber@^9.5.0",
     "three": "https://esm.sh/three@^0.182.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "vite": "https://esm.sh/vite@^7.3.1"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
 <link rel="stylesheet" href="/index.css">
 </head>
 <body>
-    <div class="portrait-warning">
-      <div class="text-4xl mb-4">🔄</div>
-      <h2 class="text-xl font-bold uppercase tracking-widest">Rotation Required</h2>
-      <p class="mt-4 opacity-70 text-sm font-mono uppercase">STARK OS optimized for landscape visor mode. Please rotate your device.</p>
-    </div>
+    <div class="portrait-warning"><h2>ROTATE DEVICE</h2></div>
     <video id="camera-visor" autoplay playsinline muted></video>
-    <div class="visor-overlay"></div>
     <div class="scan-line"></div>
     <div id="root"></div>
 <script type="module" src="/index.tsx"></script>
