--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,38 +9,20 @@
     <style>
       :root { --stark-cyan: #00f2ff; }
       body { margin: 0; background: #000; overflow: hidden; position: fixed; width: 100%; height: 100%; }
-      canvas { touch-action: none; z-index: 5; }
-      #camera-visor { position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; opacity: 0.2; filter: sepia(100%) hue-rotate(140deg); transform: scaleX(-1); z-index: 0; }
-      .scan-line { position: absolute; top: 0; left: 0; width: 100%; height: 2px; background: var(--stark-cyan); opacity: 0.1; animation: scan 8s linear infinite; pointer-events: none; z-index: 10; }
+      canvas { touch-action: none; z-index: 10; background: transparent !important; }
+      .scan-line { position: absolute; top: 0; left: 0; width: 100%; height: 2px; background: var(--stark-cyan); opacity: 0.1; animation: scan 8s linear infinite; pointer-events: none; z-index: 20; }
       @keyframes scan { 0% { transform: translateY(-100%); } 100% { transform: translateY(100vh); } }
       .hud-border { border: 1px solid rgba(0, 242, 255, 0.2); background: rgba(0, 10, 20, 0.7); backdrop-filter: blur(10px); }
       @media (orientation: portrait) and (max-width: 600px) { .portrait-warning { display: flex; } }
       .portrait-warning { display: none; position: fixed; inset: 0; background: #000; z-index: 9999; color: var(--stark-cyan); flex-direction: column; align-items: center; justify-content: center; font-family: 'Orbitron', sans-serif; }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision/vision_bundle.js" crossorigin="anonymous"></script>
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "@react-three/fiber": "https://esm.sh/@react-three/fiber@^9.5.0",
-    "@react-three/drei": "https://esm.sh/@react-three/drei@^10.7.7",
-    "three": "https://esm.sh/three@^0.182.0",
-    "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
-  }
-}
-</script>
 <link rel="stylesheet" href="/index.css">
 </head>
 <body>
     <div class="portrait-warning"><h2>ROTATE DEVICE</h2></div>
-    <video id="camera-visor" autoplay playsinline muted></video>
     <div class="scan-line"></div>
     <div id="root"></div>
-    <!-- Entry point for Vite build -->
     <script type="module" src="./index.tsx"></script>
 <script type="module" src="/index.tsx"></script>
 </body>
